# zhipin-kratos/openapi.yaml
@@ -109,17 +109,17 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.zhipin.BlacklistResp'
-    /api/blacklist/check/{company}:
-        get:
+    /api/blacklist/check:
+        post:
             tags:
                 - BlacklistService
             operationId: BlacklistService_CheckBlacklist
-            parameters:
-                - name: company
-                  in: path
-                  required: true
-                  schema:
-                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.zhipin.CheckBlacklistReq'
+                required: true
             responses:
                 "200":
                     description: OK
@@ -145,6 +145,47 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.zhipin.RemoveBlacklistResp'
+    /api/chat/{jobId}:
+        get:
+            tags:
+                - CommunicationService
+            operationId: CommunicationService_GetChat
+            parameters:
+                - name: jobId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.zhipin.GetChatResp'
+        post:
+            tags:
+                - CommunicationService
+            operationId: CommunicationService_SyncChat
+            parameters:
+                - name: jobId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.zhipin.SyncChatReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.zhipin.SyncChatResp'
     /api/position:
         post:
             tags:
@@ -434,47 +475,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.zhipin.PositionResp'
-    /api/position/{positionId}/chat:
-        get:
-            tags:
-                - CommunicationService
-            operationId: CommunicationService_GetChat
-            parameters:
-                - name: positionId
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.zhipin.GetChatResp'
-        post:
-            tags:
-                - CommunicationService
-            operationId: CommunicationService_SyncChat
-            parameters:
-                - name: positionId
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.zhipin.SyncChatReq'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.zhipin.SyncChatResp'
     /api/position/{positionId}/requirement-items:
         get:
             tags:
@@ -775,6 +775,11 @@ components:
                     type: boolean
                 resumeVersion:
                     type: string
+        api.zhipin.CheckBlacklistReq:
+            type: object
+            properties:
+                company:
+                    type: string
         api.zhipin.CheckBlacklistResp:
             type: object
             properties:
@@ -827,6 +832,9 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/api.zhipin.RequirementItemInput'
+                status:
+                    type: integer
+                    format: int32
         api.zhipin.GetChatResp:
             type: object
             properties:
@@ -995,7 +1003,7 @@ components:
         api.zhipin.SyncChatReq:
             type: object
             properties:
-                positionId:
+                jobId:
                     type: string
                 messages:
                     type: array
